--- a/vibe-docs/requirements/done/v1.1.md
+++ b/vibe-docs/requirements/done/v1.1.md
@@ -2,7 +2,7 @@
 
 ## 概述
 
-我想在现有最小化全栈开发框架基础上，开发一个运维架构可视化与监控平台，支持灵活定义和展示多类型链路（如域名链路、网络链路、流量链路等），帮助企业和团队全面掌控运维体系的关键路径和节点健康状态。  
+我想在现有最小化全栈开发框架基础上，开发一个运维架构可视化与监控平台，支持灵活定义和展示链路（如域名链路、网络链路、流量链路等），帮助企业和团队全面掌控运维体系的关键路径和节点健康状态。  
 项目支持链路自定义配置（如节点IP、探活方式、父级关系等），适用于复杂企业运维场景，不仅限于域名链路，也可覆盖网络层、应用层等多种架构链路。
 配置存储在数据库中，当企业部署我们的服务，需要自己配置链路，然后启动服务，项目会自动生成链路拓扑结构，并实时监控节点健康状态。
 
