--- a/vibe-docs/requirements/v1.7.md
+++ b/vibe-docs/requirements/v1.7.md
@@ -1,5 +1,16 @@
-# V1.6 版本需求文档
+# V1.7 版本需求文档
 
 ## 概述
 
-我们这个系统的定位，就是展示链路，然后链路的基础状态监控（ping, socket），
+我们这个系统的定位，就是展示链路，然后链路的基础状态监控，我们定义的基础监控，就是ping, socket。
+
+现在我想在这个基础上，给链路增加一个属性，是否检测单点，如果链路要检测单点，那么对于这个链路，就需要所有的节点都要有多个 base_info_list，就需要监控链路中所有node的 base_info_list：
+- 如果为0，则应为red级别报警
+- 如果为1，则应为yellow级别报警
+- 如果大于1，则认为为正常
+
+至于修改点，我认为应该包括如下几点：
+1. @code/backend/apps/monitor/models.py 的 Link model，增加一个属性，是否检测单点
+2. @code/backend/apps/monitor/tasks.py 的 check_node_health， 需要根据node的所属link是否要检测单点，来判断是否要执行单点检测，不过是不是也可以同步给node model增加一个检测单点的属性？但是是不是有点重复？
+
+至于其他的，我理解应该复用之前的逻辑就行吧？
