--- a/vibe-docs/requirements/done/v1.8.md
+++ b/vibe-docs/requirements/done/v1.8.md
@@ -7,10 +7,5 @@
 - 但是现在我们的 base_info_list 是 node 的一个jsonfield，是不是需要独立成一个单独的model？
 - 如果独立成了一个独立的model，那么唯一性应该出了本身的uuid，还应有host+port 的组合？
 
-
-
-备注
-
-
-重复监控,重复告警
+base_info 支持写备注
 
