--- a/vibe-docs/requirements/v1.100.md
+++ b/vibe-docs/requirements/v1.100.md
@@ -2,12 +2,6 @@
 
 ## 概述
 
+拆分，或者优化过大的view.py？
 
-base_info, node 支持写备注？这应该是cmdb的功能
-节点的 base_info 唯一性，需要吗？可能不需要
-
-
-告警详情：【链路】-【节点】不可用
-
-是否单点
 是否老旧（对接cmdb？）
