--- a/vibe-docs/requirements/v1.100.md
+++ b/vibe-docs/requirements/v1.100.md
@@ -2,8 +2,20 @@
 
 ## 概述
 
-架构图，g6 显示节点 base_info 数量
+### 大bug
 
+### 小bug
+增加备注时候，ctrl + v，输入框自动就关闭了，还没来得及保存
+
+### 急优化
+节点增加备注
+
+### 缓优化
+架构图，g6 节点右上方显示 base_info 数量
+节点管理，筛选：状态
 拆分，或者优化过大的view.py？
+g6 图布局优化，现在都挤在一起：
+- 自动优化？？
+- 保留拖动的x,y
 
 是否老旧（对接cmdb？）
